gzip, docker, daterange request, article headings
